Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86196

Compile-error when including QtCore5Compat

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.0.0 RC
    • 6.0
    • Core: Other
    • None
    • Windows 10, MSVC 2019 16.7
    • b690a43e4326cd9262a3ce2963949219624edd96 (qt/qt5compat/dev)

      When including <QtCore5Compat> I get the following compilation error:
      qt6-build-vs2019\qtbase\include\QtCore5Compat\QtCore5Compat(8): error C2124: divide or mod by zero

      QtCore5Compat
      #ifndef QT_QTCORE5COMPAT_MODULE_H
      #define QT_QTCORE5COMPAT_MODULE_H
      #include <QtCore5Compat/QtCore5CompatDepends>
      #include "qcore5global.h"
      #include "qbinaryjson.h"
      #include "qlinkedlist.h"
      #include "qregexp.h"
      #if QT_CONFIG(textcodec) // <--
      #include "qtextcodec.h"
      #endif
      #include "qtcore5compatversion.h"
      #endif
      
      qtcore5compat-config.h
      #define QT_FEATURE_textcodec 1
      #define QT_FEATURE_big_codecs 1
      #define QT_FEATURE_codecs 1
      #define QT_NO_ICONV 
      
      qtcore5compat-config_p.h
      #define QT_FEATURE_iconv -1
      

      I guess the problem is, that

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sonakur Sona Kurazyan
            mkrems Marcel Krems
            Maurice Kalinowski Maurice Kalinowski
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes