Fix compile error when including QtCore5Compat

Fixes: QTBUG-86196
Change-Id: I48a103ee3b57d4505aaf67c3d76f7a2af1f4065b
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>